overflow header if too large avoids huge header in cases where there are loads of tags

--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -69,6 +69,11 @@ UL {
 	text-align: left;
 }
 
+body > header > h1 {
+	max-height: 34px;
+	overflow-y: auto;
+}
+
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
 *             the navigation bar, and all its blocks             *
 * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
